--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LasReader",
+  "name": "las-reader",
   "version": "1.0.18",
   "description": "Library to read LAS formatted lidar datafiles",
   "main": "src/las.js",
